# Test

./: README.md  test
ConfFiles/: .vimrc  Fedora.multimedia.plugins
GTK/: makefile~
GTK/ComStmTest/2018-10-26/: form.glade~  main  main.c  main.c~  main.h
GTK/ComStmTest/2018-10-27/: form.glade  form.glade~  main  main.c  main.h  myprog.h
GTK/ComStmTest/2018-10-28/: comport.c  comport.h  main  main.c  main.h
GTK/ComStmTest/2018-11-05/: comport.h  form.glade~  main.h  mystyle.css
GTK/D3dUsbDrive-2.2/: hl_d3d.h  hl_usb.c  hl_usb.h  main  main.c  makefile  window_main(1).glade  work
GTK/D3dUsbDrive. Контрольные точки/D3dUsbDrive-2.2/: main.c  window_main(1).glade
GTK/Desk3dUsbDrive-1.1/: main  main.c
GTK/MakeFiles/: makefile+
GTK/TermofanControl/TermoFanControl-2.2(PC)/: form.glade  main  main.c  main.h
GTK/UI/: Desk3dUsbDrive-1.1  Desk3dUsbDrive-1.1~
GTK/USB/firstProg/: Makefile.in  configure
GTK/anjuta2/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
GTK/anjuta2/src/: Makefile.am  Makefile.in  main.c  main.c~
GTK/for test only/: main  main.c  makefile
GTK/gtk (label+button+css)/: testsignal  testsignal.c
GTK/gtk1/: gtk1  makefile(0)  makefile~
GTK/myTestprog/: main  makefile
GTK/myprog/: main.c  myprog.h
GTK/myprog+glade/: habrahabr.ui  main  main.c  makefile  makefile~
GTK/progtest(main window and h)/: main
GTK/progtest2(mainWindow)/: main  main.c  testsignal.c
GTK/signal(3pcs)/: main  main.c
GTK/userDataSend/: main
GTK/архив/USB/firstProg/src/: Makefile.am  main.c  main.c~  test
confiles/: .vimrc  init.el
(+175 files in other folders)
